Implemented API token authentication system with JWT, create user database, and created login/register functionality
