# aws/lambda/LoginHandler/index.js
@@ -1,0 +1,26 @@
+const registerService = require('./service/register');
+const loginService = require('./service/login');
+const util = require('./utils/util');
+
+const registerPath = '/register'
+const loginPath = '/login'
+
+exports.handler = async (event) => {
+    console.log('Request Event: ', event);
+    let response;
+
+    switch(true) {
+        case event.httpMethod === 'POST' && event.path == registerPath:
+            const registerBody = JSON.parse(event.body);
+            response = await registerService.register(registerBody);
+            break;
+        case event.httpMethod === 'POST' && event.path == loginPath:
+            const loginBody = JSON.parse(event.body);
+            response = await loginService.login(loginBody);
+            break;
+        default:
+            response = util.buildResponse(404, '404 Not Found');
+    }
+
+    return response;
+}
